; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cvar.c_Cvar_SetValue.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cvar.c_Cvar_SetValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%i\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%f\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Cvar_SetValue(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca [32 x i8], align 16
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %6 = load float, float* %4, align 4
  %7 = load float, float* %4, align 4
  %8 = fptosi float %7 to i32
  %9 = sitofp i32 %8 to float
  %10 = fcmp oeq float %6, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %13 = load float, float* %4, align 4
  %14 = fptosi float %13 to i32
  %15 = sitofp i32 %14 to float
  %16 = call i32 @Com_sprintf(i8* %12, i32 32, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), float %15)
  br label %21

17:                                               ; preds = %2
  %18 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %19 = load float, float* %4, align 4
  %20 = call i32 @Com_sprintf(i8* %18, i32 32, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), float %19)
  br label %21

21:                                               ; preds = %17, %11
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %24 = call i32 @Cvar_Set(i8* %22, i8* %23)
  ret void
}

declare dso_local i32 @Com_sprintf(i8*, i32, i8*, float) #1

declare dso_local i32 @Cvar_Set(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
